examples/test/testpolicy16228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16228
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key34: value33
      key16: value1
      key39: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value45
          key6: value22
          key45: value7
      podSelector:
        matchLabels:
          key4: value27
          key38: value10
